infrastructure/tpi-1/default-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    external-dns.alpha.kubernetes.io/target: ${cloudflare_tunnel_id}.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: default-backend
  namespace: infrastructure
spec:
  ingressClassName: nginx
  rules:
  - host: static.wahoo.li
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: overseerr.wahoo.li
    http:
      paths:
      - path: /setup(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: paperless.wahoo.li
    http:
      paths:
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: vault.wahoo.li
    http:
      paths:
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  tls:
  - hosts:
    - overseerr.wahoo.li
    - paperless.wahoo.li
    - vault.wahoo.li
    - static.wahoo.li
